@@ -1,5 +1,9 @@
 2001-08-23  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c: fill in the status bar message for the menuitems
+
+2001-08-23  Kevin Vandersloot <kfv101@psu.edu>
+
 	* load-graph.c: make the graph one pixel smaller than the frame
 	so it always shows up.
 	Initialize the data points to -1 and then don't display them.
